--- a/crudMED/style.css
+++ b/crudMED/style.css
@@ -10,7 +10,7 @@ body {
   justify-content: space-between;
   align-self: center;
 }
-.crud-SERV {
+.crud-MED {
   display: flex;
   justify-content: center;
   min-height: 30vh;
