--- a/consultsPages/professional_User/style.css
+++ b/consultsPages/professional_User/style.css
@@ -11,6 +11,7 @@ body {
   justify-content: center;
   gap: 2%;
   padding-top: 100px;
+  font-family: "League Spartan", sans-serif;
 }
 .trajeto {
   border-right: 2px solid black;
@@ -37,6 +38,7 @@ body {
   background-color: white;
   font-size: 20px;
   cursor: pointer;
+  font-family: "League Spartan", sans-serif;
 }
 #button_especialidade button > div {
   display: flex;
