--- a/src/consultsPages/horario_User/style.css
+++ b/src/consultsPages/horario_User/style.css
@@ -25,6 +25,13 @@ body {
   flex-direction: column;
   gap: 50px;
 }
+.especialidades input[type="date"]{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  outline: 0;
+}
 #button_especialidade {
   display: flex;
   flex-direction: column;
