--- a/src/consultsPages/especialidades_User/style.css
+++ b/src/consultsPages/especialidades_User/style.css
@@ -15,9 +15,37 @@ body {
 #agendar img {
   position: absolute;
 }
+.p-agendamentos {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+}
+.rotas-filhas {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+}
+.rota-filha {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  flex-direction: column;
+  align-self: flex-start;
+  height: 2.5vh;
+  width: 1.5vw;
+  border-radius: 50%;
+  /* border: 3px solid #629fb6; */
+  background-color: #1c353d;
+  gap: 10px;
+}
 .trajeto {
   border-right: 2px solid black;
   width: 300px;
+  font-family: "League Spartan", sans-serif;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
 }
 #agendar p {
   margin-left: 80px;
