--- a/src/crudMED/style.css
+++ b/src/crudMED/style.css
@@ -24,6 +24,7 @@ body {
   font-weight: 600;
   padding: 5px 10px 10px 10px;
   background-color: #30b3e2;
+  cursor: pointer;
 }
 #Container {
   display: flex;
