--- a/src/consultsPages/dados_User/style.css
+++ b/src/consultsPages/dados_User/style.css
@@ -5,6 +5,38 @@
 body {
   background-color: #edf8f7;
 }
+@keyframes slide-in-right {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+#menu-lateral {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 200px;
+  height: 100%;
+  background-color: #fff;
+  z-index: 1000;
+  color: black;
+  animation: slide-in-right 0.5s;
+  animation-fill-mode: forwards;
+}
+#menu-lateral div {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  gap: 20px;
+}
+#menu-lateral.mostrar {
+  display: block;
+}
+
 #Container {
   display: flex;
   flex: 1;
@@ -81,6 +113,8 @@ input {
   border: 1px solid #629fb6;
   border-radius: 40px;
   margin-top: 10px;
+  margin-bottom: 20px;
+  padding-left: 10px;
 }
 select {
   outline: none;
@@ -91,6 +125,7 @@ select {
   color: black;
   border: 1px solid #629fb6;
   border-radius: 40px;
+  margin-bottom: 20px;
 }
 option {
   outline: none;
