--- a/src/consultsPages/home_User/style.css
+++ b/src/consultsPages/home_User/style.css
@@ -256,6 +256,7 @@ footer img {
   flex-direction: row;
   justify-content: space-around;
 }
+
 #Whatsapp {
   cursor: pointer;
 }
@@ -280,12 +281,11 @@ footer img {
 .btn_contact button {
   display: flex;
   justify-content: center;
-  align-self: center;
+  align-items: center;
   background-color: #629fb6;
   color: white;
   border: 1px solid #629fb6;
   border-radius: 50px;
-  padding: 15px;
   font-family: "League Spartan", sans-serif;
   font-weight: bold;
   font-size: 30px;
