--- a/src/laddingPAGE/style.css
+++ b/src/laddingPAGE/style.css
@@ -13,6 +13,14 @@ body {
     transform: translateX(0);
   }
 }
+@keyframes slide-in-left {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(100%);
+  }
+}
 
 #menu-lateral {
   display: none;
@@ -175,6 +183,37 @@ body {
   font-weight: 800;
   font-size: 40px;
 }
+.boxs {
+  width: 100%;
+  overflow: hidden;
+  padding-left: 20vw;
+}
+
+.carrossel {
+  display: flex;
+  transition: transform 0.5s ease;
+}
+
+.carrossel > div {
+  flex: 0 0 100%;
+  max-width: 100%;
+  padding: 0 20px;
+  box-sizing: border-box;
+}
+
+/* Define a posição e tamanho de cada sessão */
+.session-1 {
+  order: 1;
+}
+
+.session-2 {
+  order: 2;
+}
+
+.session-3 {
+  order: 3;
+}
+
 footer {
   padding-bottom: 200px;
   display: flex;
