--- a/src/laddingPAGE/style.css
+++ b/src/laddingPAGE/style.css
@@ -156,14 +156,15 @@ body {
 .meio {
   display: flex;
   justify-content: space-around;
-  margin-top: 300px;
-  margin-bottom: 300px;
+  margin-top: 200px;
+  margin-bottom: 200px;
 }
 .text h1 {
   color: #629fb6;
   font-size: 90px;
 }
 .text {
+  margin-left: 3vw;
   font-family: "League Spartan", sans-serif;
 }
 .text h4 {
@@ -212,6 +213,26 @@ body {
 
 .session-3 {
   order: 3;
+}
+/* Estilo para as bolinhas */
+.dots {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.dot {
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  background-color: #bbb;
+  margin: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.dot.active {
+  background-color: #717171;
 }
 
 footer {
