--- a/src/loginPage/style.css
+++ b/src/loginPage/style.css
@@ -134,7 +134,7 @@ form#login-form {
   font-family: "League Spartan", sans-serif;
 }
 #login-form input[type="email"],
-input[type="password"] {
+input[type="password"], input[type="text"] {
   padding: 10px 5px;
   border: none;
   height: 4vh;
@@ -263,6 +263,15 @@ nav a {
   justify-content: center;
   border-radius: 50px;
 }
+
+
+.lnr-eye {
+  position: relative;
+  right: 20px;
+  
+  cursor: pointer;
+}
+
 #header img {
   height: 120px;
 }
