--- a/src/crudMED/style.css
+++ b/src/crudMED/style.css
@@ -5,6 +5,69 @@
 body {
   background-color: #edf8f7;
 }
+@keyframes slide-in-right {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+@keyframes slide-in-left {
+  from {
+    transform: translateX(0%);
+  }
+  to {
+    transform: translateX(100%);
+  }
+}
+
+#menu-lateral {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 200px;
+  height: 100%;
+  background-color: #fff;
+  z-index: 1000;
+  font-family: "League Spartan", sans-serif;
+  color: black;
+  animation: slide-in-right 0.5s;
+  animation-fill-mode: forwards;
+}
+#menu-lateral div {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  gap: 20px;
+}
+#menu-lateral div a {
+  display: flex;
+  justify-content: center;
+}
+#menu-lateral div a img {
+  height: 10vh;
+  width: 5vw;
+}
+#menu-lateral div a {
+  color: black;
+  font-size: 3vh;
+  font-weight: 550;
+  text-decoration: none;
+}
+#menu-lateral div img {
+  display: flex;
+  align-self: center;
+  width: 60%;
+  padding-top: 10vh;
+}
+#menu-lateral.mostrar {
+  display: block;
+}
+.hidden {
+  display: none;
+}
 .selectt {
   display: flex;
   justify-content: space-between;
@@ -16,7 +79,7 @@ body {
   flex-direction: column;
   min-height: 30vh;
 }
-.all-div{
+.all-div {
   display: flex;
   justify-content: center;
 }
@@ -71,13 +134,13 @@ body {
   align-items: flex-start;
   padding-left: 1vw;
 }
-#dynamicTables-Main{
+#dynamicTables-Main {
   display: flex;
   justify-content: center;
   align-items: center;
   text-align: center;
 }
-#dynamicTables{
+#dynamicTables {
   background-color: #333;
   color: white;
   width: 41%;
@@ -86,13 +149,13 @@ body {
   align-items: center;
   text-align: center;
 }
-#dynamicTables table th{
+#dynamicTables table th {
   background-color: #629fb6;
 }
-#dynamicTables table td{
-  background-color: rgb(178, 162, 250)
+#dynamicTables table td {
+  background-color: rgb(178, 162, 250);
 }
-#btnADC{
+#btnADC {
   height: 20px;
   width: 10vw;
 }
