--- a/src/crudPAC/style.css
+++ b/src/crudPAC/style.css
@@ -2,6 +2,30 @@
   padding: 0px;
   margin: 0px;
 }
+#dynamicTables-Main {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+}
+#dynamicTables {
+  display: flex;
+  margin-left: 20%;
+  margin-right: 20%;
+  background-color: #333;
+  color: white;
+  min-width: 25vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+#dynamicTables table th {
+  background-color: #629fb6;
+}
+#dynamicTables table td {
+  background-color: rgb(178, 162, 250);
+}
 body {
   background-color: #edf8f7;
 }
@@ -69,7 +93,7 @@ body {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  height: 200px;
+  min-height: 10vh;
 }
 .select {
   height: 50px;
