Updates in ADM screens

--- a/src/crudSERV/style.css
+++ b/src/crudSERV/style.css
@@ -75,6 +75,9 @@ body {
   flex-direction: column;
   gap: 50px;
 }
+a{
+  cursor: pointer;
+}
 #button_especialidade {
   display: flex;
   flex-direction: column;
