--- a/src/crudMED/style.css
+++ b/src/crudMED/style.css
@@ -2,6 +2,12 @@
   padding: 0px;
   margin: 0px;
 }
+#deleteServices{
+  cursor: pointer;
+}
+#updateServices{
+  cursor: pointer;
+}
 @keyframes slide-in-right {
   from {
     transform: translateX(100%);
