--- a/src/Configuracao/alterarDados/loggout/style.css
+++ b/src/Configuracao/alterarDados/loggout/style.css
@@ -5,6 +5,62 @@
 body {
   background-color: #edf8f7;
 }
+@keyframes slide-in-right {
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
+}
+
+#menu-lateral {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 200px;
+  height: 100%;
+  background-color: #fff;
+  z-index: 1000;
+  font-family: "League Spartan", sans-serif;
+  color: black;
+  animation: slide-in-right 0.5s;
+  animation-fill-mode: forwards;
+}
+#menu-lateral div {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  gap: 20px;
+}
+#menu-lateral div a {
+  display: flex;
+  justify-content: center;
+}
+#menu-lateral div a img {
+  height: 10vh;
+  width: 5vw;
+}
+#menu-lateral div a {
+  color: black;
+  font-size: 3vh;
+  font-weight: 550;
+  text-decoration: none;
+}
+#menu-lateral div img {
+  display: flex;
+  align-self: center;
+  width: 60%;
+  padding-top: 10vh;
+}
+#menu-lateral.mostrar {
+  display: block;
+}
+
+.hidden {
+  display: none;
+}
 .mainContainer{
   display: flex;
   flex-direction: column;
